Canceled all events on Rainy Feb. 25-26 weekend

--- a/index.htm
+++ b/index.htm
@@ -289,15 +289,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <h4>click below for details...</h4>
 <a href= "Event_Pages/movies2023/SatMatinee.png" 
 title="Saturday Matinees" rel="lightbox[satMatinee]">
-<img align="center" src="Event_Pages/movies2023/SatMatinees.png"/>
-</a>
-<br>
-<br>
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
-<h2>Healing Workshop in Hart Park!</h2>
-<h4>Click below for details</h4>
-<a target="_blank" href="https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list">
-<img src="Event_Pages/HealingWorkshop-Spring2023.jpg"/>
+<img align="center" src="Event_Pages/movies2023/SatMatinee-3-25-sm.png"/>
 </a>
 <br>
 <br>
@@ -306,6 +298,14 @@ title="Saturday Matinees" rel="lightbox[satMatinee]">
 <h4>Click below for details</h4>
 <a target="_blank" href="https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list">
 <img src="Event_Pages/PlantCamp-Spring2023.jpg"/>
+</a>
+<br>
+<br>
+<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
+<h2>Healing Workshop in Hart Park!</h2>
+<h4>Click below for details</h4>
+<a target="_blank" href="https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list">
+<img src="Event_Pages/HealingWorkshop-Spring2023.jpg"/>
 </a>
 <br>
 <br>
@@ -324,22 +324,6 @@ Saturdays 10:30am&mdash;12:30pm
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
 </a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, Feb. 25<sup>th</sup> at 1pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/movies2023/SatMatinee-2-25.png" 
-title="Saturday Matinees`" rel="lightbox[satMatinee]">
-Saturday Matinee: Madagascar 3
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Sundays, Feb. 26<sup>th</sup>, Mar.26<sup>th</sup>, and May 21<sup>st</sup> at 11am&ndash;1pm
-</td> <td id="Event"> 
-<a target="_blank" href= "https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list" >
-Somatic Healing Workshop
-</a>
-</td></tr>
 <tr> <td id="EventDate">
 Tuesdays, Wednesdays and Thursdays in March, 9am&ndash;11am
 </td> <td id="Event"> 
@@ -353,6 +337,13 @@ Saturday, Mar. 25<sup>th</sup> at 1pm
 <a href= "Event_Pages/movies2023/SatMatinee-3-25.png" 
 title="Saturday Matinees`" rel="lightbox[satMatinee]">
 Saturday Matinee: Moana
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Sundays, Mar.26<sup>th</sup>, and May 21<sup>st</sup> at 11am&ndash;1pm
+</td> <td id="Event"> 
+<a target="_blank" href= "https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list" >
+Somatic Healing Workshop
 </a>
 </td></tr>
 <tr> <td id="EventDate">
