--- a/Trading_Post/index.html
+++ b/Trading_Post/index.html
@@ -159,8 +159,12 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                    <div style="text-align: center;">
                     <h1>THE TRADING POST GIFT SHOP</h1>
                     <h2>William S. Hart Park and Museum</h2>
+                    <p align="center">
+                        <img align="center" src="TradingPostHours_sm.png"/>
+                    </p>
 					<img src="../images/BarbedWire3.png"/>
 					</div>
+<!--
 <div id="leftthird">
 <h3>Shop On-line!</h3>
 <p>Wm. S. Hart merchandise is now available on-line!  Just follow these links to the OutWest Store
@@ -198,7 +202,8 @@ William S. Hart Stamps and Postcards
 <div id="leftborder">
 <img src="../images/BarbedWireVertical.png"/>
 </div>
-<div id="leftthird">
+-->
+<div id="leftside">
 <div align="center"> <img src="TradingPost-sm.png"/></div>
 <br>The Gift Store is stocked with a wide variety of merchandise including Western theme books, music, 
 movies, jewelry, purses, home decorations, art work, toys and other items including a limited 
