Fixed hours on store website.

--- a/Trading_Post/index.html
+++ b/Trading_Post/index.html
@@ -234,7 +234,7 @@ William S. Hart&rdquo; provides photographs and an overview of each of his films
 <!--The current inventory of films includes:-->
 Individual DVDs and a special 5-pack collection are available.
 <p>Visitors to the Gift Store will find that we provide free Park information sheets and a Park map. We look forward to having you drop by the Gift Store!
-<p><b>Operating hours:</b>  Weekends 11:00am to 3:30pm.  Also open during special Park Events and by 
+<p><b>Operating hours:</b>  Saturdays 10am to 2pm, weather permitting.  Also open during special Park Events and by 
 appointment through the Museum for tours and school fieldtrips. 
 Contact the Museum staff at www.hartmuseum.org to arrange a visit to the Store.
 <p><b>Location:  </b>The Gift Store is conveniently located near the main Park entrance between the Ranch House 
