Added 2023 Cowboy Festival (even though we have nothing to do with it).

--- a/index.htm
+++ b/index.htm
@@ -281,6 +281,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
+<!--  Un-comment this after cowboy fest 4/23/2023
 <div id="mainlefttwothirds">
 <br><br>
 <h2 align="right">Click on the new book about William S. Hart Park to watch an interview with its authors, 
@@ -297,6 +298,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <a href= "Event_Pages/movies2023/SatMatinee.png" 
 title="Saturday Matinee" rel="lightbox[satMatinee]">
 <img align="center" src="Event_Pages/movies2023/SatMatinee-4-22-sm.png"/>
+</a>
+-->
+Click below for details on this year's Cowboy Festival, coming soon!
+<a target="_blank" href="https://cowboyfestival.org/">
+<img src="Event_Pages/cowboyfest2023.png" />
 </a>
 <br>
 <br>
@@ -329,6 +335,13 @@ Saturday, Apr. 22<sup>nd</sup> at 1pm
 <a href= "Event_Pages/movies2023/SatMatinee-4-22.png" 
 title="Saturday Matinees`" rel="lightbox[satMatinee]">
 Saturday Matinee: Zootopia
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, Apr. 22<sup>nd</sup> &amp; 23<sup>rd</sup>
+</td> <td id="Event"> 
+<a target="_blank" href= "https://cowboyfestival.org">
+Cowboy Festival!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
