Cleaned up Board of Directors list (as much as possible). Fixed the Mansion page to show it's closed, and to fix long-standing format error. Put Zootopia movie back on main page.

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -154,24 +154,17 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director/Treasurer</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Becki Basham</td>
+                            <td id="BOLD" align="left">Leon Worden</td>
                             <td align="left">Director/1<sup>st</sup> Vice President</td>
                             <td align="left"><br></td>
                             <td id="BOLD" align="left">Sheila Miller<br></td>
                             <td align="left">Director/Secretary</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Leon Worden</td>
+                            <td id="BOLD" align="left">Becki Basham</td>
                             <td align="left">Director/2<sup>nd</sup> Vice President</td>
                             <td align="left"><br></td>
-                            <td id="BOLD" align="left">Nancy Gallarado</td>
-                            <td align="left">Director/Recording Secretary</td>
-                          </tr>
-                          <tr>
                             <td id="BOLD" align="left">Jack C. Stewart</td>
-                            <td align="left">Director</td>
-                            <td align="left"><br></td>
-                            <td id="BOLD" align="left">Gladys Farrell</td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
@@ -221,10 +214,10 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Eric Reifman</td>
+                            <td id="BOLD" align="left">Chris Mowry</td>
                             <td align="left">Park Superintendent</td>
                             <td align="left">&nbsp;</td>
-                            <td id="BOLD" align="left">Margi Bertram<br>
+                            <td id="BOLD" align="left">Maggie Romero<br>
                             </td>
                             <td align="left">Museum Administrator</td>
                           </tr>
