--- a/The_Friends/fhp_organization.html
+++ b/The_Friends/fhp_organization.html
@@ -117,18 +117,19 @@ function MM_swapImage() { //v3.0
 			  <P>The Friends of Hart Park is a non profit California corporation composed of volunteers who donate 
 					their time and talents to help raise funds and otherwise support the Park and Museum as a supplement 
 					to the County of Los Angeles.<br><br>The organization is directed by a <b>
-              <a target="_parent" href="directors.html">board of 17 members</a></b> 
+              <a target="_parent" href="directors.html">board of directors</a></b> 
 				elected annually. The current President is Santa Clarita City 
-				Councilwoman, Laurene Weste.<br>
+				Councilwoman, Laurene Weste.<br><br>
 					<b><a target="_parent" href="membership.html">Memberships</a></b> are available in several 
-					categories and there are approximately 120 Friends.  Many Friends volunteer to assist in organizing 
+					categories.  Many Friends volunteer to assist in organizing 
 					and conducting events and operating the <A
 						href="../Trading_Post/store.html" target="_parent"><b>Trading Post</b></A>.  There are also many opportunities to <b>
               <a target="_parent" href="volunteer.html">volunteer</a></b> as tour guides of the mansion or do other interesting and fulfilling things.<br><br>Funds 
 					are earned by conducting special events that celebrate the life and times of Hart, or are related in 
 					some way to the Western way of life.  These events allow the membership and guests to experience the 
-					<A href="../Mansion/mansion.html" target="_parent"><b>mansion</b></A> and it's surrounds firsthand and in an intimate way not experienced by the casual visitor.  
-					It is a very special place.<br><br>The friends have done many things to assist in the preservation 
+					<A href="../Mansion/mansion.html" target="_parent"><b>mansion</b></A> and its surroundings firsthand and in an 
+                    intimate way not experienced by the casual visitor.  
+					It is a very special place.<br><br>The Friends have done many things to assist in the preservation 
 					promotion and maintenance of the park and museum, including donating all or part of the cost for several projects.</P>
 			</TD>
 		</TR>
