--- a/index.htm
+++ b/index.htm
@@ -292,17 +292,19 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <img src="images/WmSHartbook.jpg" />
 </a>
 </div>
+-->
+<h2>Click below for details on this year's Cowboy Festival, this weekend!</h2>
+<a target="_blank" href="https://cowboyfestival.org/">
+<img src="Event_Pages/cowboyfest2023.png" />
+</a>
+<br>
+<br>
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 <h2>Free Saturday Matinee in the Park!</h2>
 <h4>click below for details...</h4>
 <a href= "Event_Pages/movies2023/SatMatinee.png" 
 title="Saturday Matinee" rel="lightbox[satMatinee]">
 <img align="center" src="Event_Pages/movies2023/SatMatinee-4-22-sm.png"/>
-</a>
--->
-Click below for details on this year's Cowboy Festival, coming soon!
-<a target="_blank" href="https://cowboyfestival.org/">
-<img src="Event_Pages/cowboyfest2023.png" />
 </a>
 <br>
 <br>
