--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -155,14 +155,14 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">Leon Worden</td>
-                            <td align="left">Director/1<sup>st</sup> Vice President</td>
+                            <td align="left">Director/Vice President</td>
                             <td align="left"><br></td>
                             <td id="BOLD" align="left">Sheila Miller<br></td>
                             <td align="left">Director/Secretary</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">Becki Basham</td>
-                            <td align="left">Director/2<sup>nd</sup> Vice President</td>
+                            <td align="left">Director/Vice President</td>
                             <td align="left"><br></td>
                             <td id="BOLD" align="left">Jack C. Stewart</td>
                             <td align="left">Director</td>
