--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -215,6 +215,11 @@ function MM_swapImage() { //v3.0
                                   Winter 2022&ndash;2023
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/5f36ab3d911f/hart-of-the-matter-spring-2023" target="_blank">
+                                  Spring 2023
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
