--- a/index.html
+++ b/index.html
@@ -278,10 +278,19 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <td align="center" valign="top" width="557">
 <p align="center">
 <!-------------------------------------------------------------------------------->
-<!--
+
+<h2 align="center"> Click below to see some snapshots from 2023's Cowboy Festival!</h2>
+<a target="_blank" href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.6210678865663671">
+<img src="Event_Pages/cowboyfest2023/cowboyfest2023.png"/>
+</a>
+<h2 align="center"> and  below to see some of the festival's tour of Melody Ranch!</h2>
+<a target="_blank" href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.6210702262327998">
+<img src="Event_Pages/cowboyfest2023/cowboyfest2023-MelodyRanch.png"/>
+</a>
+<br>
+<br>
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
--->
-<!--  Un-comment this after cowboy fest 4/23/2023
+
 <div id="mainlefttwothirds">
 <br><br>
 <h2 align="right">Click on the new book about William S. Hart Park to watch an interview with its authors, 
@@ -292,20 +301,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <img src="images/WmSHartbook.jpg" />
 </a>
 </div>
--->
-<h2>Click below for details on this year's Cowboy Festival, this weekend!</h2>
-<a target="_blank" href="https://cowboyfestival.org/">
-<img src="Event_Pages/cowboyfest2023.png" />
-</a>
-<br>
-<br>
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
-<h2>Free Saturday Matinee in the Park!</h2>
-<h4>click below for details...</h4>
-<a href= "Event_Pages/movies2023/SatMatinee.png" 
-title="Saturday Matinee" rel="lightbox[satMatinee]">
-<img align="center" src="Event_Pages/movies2023/SatMatinee-4-22-sm.png"/>
-</a>
 <br>
 <br>
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
@@ -331,21 +326,6 @@ Saturdays 10:30am&mdash;12:30pm
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
 </a>
-<tr> <td id="EventDate">
-Saturday, Apr. 22<sup>nd</sup> at 1pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/movies2023/SatMatinee-4-22.png" 
-title="Saturday Matinees`" rel="lightbox[satMatinee]">
-Saturday Matinee: Zootopia
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday &amp; Sunday, Apr. 22<sup>nd</sup> &amp; 23<sup>rd</sup>
-</td> <td id="Event"> 
-<a target="_blank" href= "https://cowboyfestival.org">
-Cowboy Festival!
-</a>
-</td></tr>
 <tr> <td id="EventDate">
 Sunday, May 21<sup>st</sup> at 11am&ndash;1pm
 </td> <td id="Event"> 
