Added dates for 2023 Powwow.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -177,18 +177,22 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                             <h2 align="center">26<sup>th</sup> Annual</h2>
 -->
                             <p align="center"> </p>
+<h1 align="center">
+Save the dates!  September 30<sup>th</sup> &amp; October 1<sup>st</sup>!
+</h1>
                             <p align="center"> </p>
                             <p align="center"> <img
                                 src="PowWowTitle.png" alt="PowWow">
                             </p>
                             <p align="center"> </p>
                             <h2 align="center"> and Craft Fair<br><br></h2>
-<h1 align="center">We're sorry to report that the 2020&ndash;2022 Pow Wows have been 
-cancelled due to the Corona Virus pandemic.</h1>
-                              </h2>
-                    <hr>
-<p><h2 align="center">
-Stay tuned to this page for details on the 2023 Pow Wow, as they become available.<br><br>
+<h2 align="center">
+We're thrilled to be planning the 2023 Pow Wow.
+</h2>
+<h3 align="center">
+Stay tuned here for details as they become available.
+</h3>
+<br><br>
 <!--
 Saturday, October 5<sup>th</sup> &mdash; 11am to 6pm <br>
 Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
@@ -338,9 +342,9 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                     <p style="margin-top: 0"><b> <font
                                           color="#800000" size="5">2023
                                           Schedule</font></b></p>
-                                    <ul>
+                                    <ul><b>
                                       <li>
-                                        TBD
+                                        Saturday, Sept. 30<sup>th</sup>
                                       <!--
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"><font
@@ -348,10 +352,8 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                             size="3"><br>
                                           </font></font>
                                           --></li>
-                                      <font color="#006600"><font
-                                          size="3"> </font></font><b>
                                         <li>
-                                        TBD
+                                        Sunday, Oct. 1<sup>st</sup>
                                         <!--
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"><font
