Updated membership page to be less wrong, and removed Becki's 10% off because it was just too difficult. Added Newhallywood update with corrected dates. Added a few save-the-date events. Added the free movies in the park.

--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -117,18 +117,16 @@ function MM_swapImage() { //v3.0
 					<TD width="60">
 					<IMG border="0" src="../images/spacer.gif" width="2" height="385">
 					</TD>
-					<TD width="876" valign="top">
-						<p align="center"><b><i>
+					<TD width="876" valign="top"> <p align="center"><b><i>
 					<h2>The Friends of Hart Park &amp; Museum</h2></i></b><br>
 <h4>
 <p>
 Please join The Friends of Hart Park!  We are people in your community who volunteer their time and talents to support the park and museum facilities.  For many years, funds raised by the Friends have been used to help maintain the mansion, help with the animals in the park, and clean/restore numerous art treasures.
-<p>
-<b>By joining at any level, you may also receive our quarterly newsletter, and be kept up to date on our events! See sign-up below.</b>
 
 <p>Additionally, you can enjoy the benefits outlined below if you join at the Sponsor level and above.
-<p>
-All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
+
+<p>Finally, stay up to date on our events! See sign-up for our free newletter below.
+<p>All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
 </h4>
 <h3>Annual (except where indicated) Membership categories &amp; additional benefits</h3>
 		<h4>
@@ -152,40 +150,40 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 				<TR>
 					<td><b>Sponsor&mdash;$75</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
 				</TR>
 				<TR>
 					<td><b>Patron&mdash;$125</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>2 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>2 tickets to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 				</TR>
 				<TR>
 					<td><b>Silver&mdash;$250</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>4 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>4 tickets to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
 				</TR>
 				<TR>
 					<td><b>Gold&mdash;$500</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>6 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>6 tickets to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
 				</TR>
 				<TR>
 					<td><b>Diamond&mdash;$1000</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>8 tickets (reserved table) to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>8 tickets (reserved table) to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
 				</TR>
 				<TR>
 					<td><b>Corporate Benefactor&mdash;$2500</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>10 tickets (reserved table) to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>10 tickets (reserved table) to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> gift shop</td>
 					<td>Free rental of <a href="../Hart_Hall/hart_hall.html">Hart Hall</a> for 1 corporate event 
 					(<a href="../Contact/contact.html">call Park</a> for details)</td>
@@ -219,6 +217,8 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 <!-- Begin Mailchimp Signup Form -->
 <br>
 <hr>
+
+
 <div id="mc_embed_signup">
 <form action="https://FriendsOfHartPark.us13.list-manage.com/subscribe/post?u=49d82e29767e797493dce561a&amp;id=435ef0006d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
