--- a/index.htm
+++ b/index.htm
@@ -279,16 +279,15 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <p align="center">
 <!-------------------------------------------------------------------------------->
 
-<h2 align="center"> Click below to see some snapshots from 2023's Cowboy Festival!</h2>
-<a target="_blank" href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.6210678865663671">
-<img src="Event_Pages/cowboyfest2023/cowboyfest2023.png"/>
-</a>
-<h2 align="center"> and  below to see some of the festival's tour of Melody Ranch!</h2>
-<a target="_blank" href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.6210702262327998">
-<img src="Event_Pages/cowboyfest2023/cowboyfest2023-MelodyRanch.png"/>
+<h2 align="center">Click below for details on the upcoming Newhallywood Silent Film Festival!<br><br></h2>
+<a target="_blank" href="https://santaclaritaarts.com/newhallywood">
+<img src="Event_Pages/Newhallywood-2023.jpg"/>
 </a>
 <br>
 <br>
+<!-------------------------------------------------------------------------------->
+
+<!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 
 <div id="mainlefttwothirds">
@@ -303,6 +302,26 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 </div>
 <br>
 <br>
+-->
+<!-------------------------------------------------------------------------------->
+
+<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
+
+<div id="mainlefttwothirds">
+<br><br>
+<h2 align="right">Click on the flyer to the right to learn about free movies in Hart Park this summer!
+</h2>
+</div>
+<div id="mainrightthird">
+<a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
+title="Summer Movie Nights" rel="lightbox[movieNights]">
+<img src="Event_Pages/movies2023/SummerMovieNightsFlyer_sm.jpg" />
+</a>
+</div>
+<br>
+<br>
+<!-------------------------------------------------------------------------------->
+
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 <h2>Healing Workshop in Hart Park!</h2>
 <h4>Click below for details</h4>
@@ -332,18 +351,35 @@ Sunday, May 21<sup>st</sup> at 11am&ndash;1pm
 <a target="_blank" href= "https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list" >
 Somatic Healing Workshop
 </a>
+<tr> <td id="EventDate">
+Friday, Saturday, Sunday &amp; Monday, May 26<sup>th</sup>&ndash;29<sup>th</sup>
+</td> <td id="Event"> 
+<a target="_blank" href= "https://santaclaritaarts.com/newhallywood/" >
+Newhallywood Silent Film Festival
+</a>
+<tr> <td id="EventDate">
+</td></tr>
+<tr> <td id="EventDate">
+Fridays at 7:45pm, June 16<sup>th</sup> &amp; 30<sup>th</sup>, July 28<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
+title="Summer Movie Nights" rel="lightbox[movieNights]">
+Free Summer Movies Nights in the Park
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday, June 17<sup>th</sup> (Save the date, details to follow)
+</td> <td id="Event"> 
+Pet Adoption Event
+</td></tr>
+<tr> <td id="EventDate">
+Saturday Sep. 30<sup>td</sup> &amp; Oct 1<sup>st</sup> Picnic Grounds
+</td> <td id="Event"> 
+<a href="Event_Pages/powwow.html">
+Native American Pow Wow &amp; Craft Fair
+</a>
 </td></tr>
 <!--
-<tr> <td id="EventDate">
-<del>Sunday, Sept. 20<sup>th</sup> 8am&mdash;12pm</del>
-</td> <td id="Event"> 
-<del>Yoga Kula (Community) Festival</del>
-</td></tr>
-<tr> <td id="EventDate">
-<del>Saturday &amp; Sunday, Oct. 3<sup>rd</sup> 11am&mdash;6pm &amp; Oct 4<sup>th</sup> 11am&mdash;5pm, Picnic Grounds</del>
-</td> <td id="Event"> 
-<del>Native American Pow Wow &amp; Craft Fair</del>
-</td></tr>
 <tr> <td id="EventDate">
 <del>Sunday, Oct. 11<sup>th</sup> 11am&mdash;4pm, Picnic Grounds</del>
 </td> <td id="Event"> 
