--- a/The_Friends/index.html
+++ b/The_Friends/index.html
@@ -49,6 +49,14 @@ function MM_swapImage() { //v3.0
   })();
 
 </script>
+
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#f6f5ee; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+
 </HEAD>
 <BODY bgcolor="#202019" background="../images/202019_back.gif" onLoad="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','../images/nav/fiesta_B.gif','../images/nav/fiesta_R.gif','../images/nav/hall_B.gif','../images/nav/hall_R.gif','../images/nav/man_B.gif','../images/nav/man_R.gif','../images/nav/mbr_B.gif','../images/nav/mbr_R.gif','../images/nav/out_B.gif','../images/nav/out_R.gif','../images/nav/post_B.gif','../images/nav/post_R.gif','../images/nav/pow_B.gif','../images/nav/pow_R.gif','../images/nav/silents_B.gif','../images/nav/silents_R.gif','../images/nav/specials_B.gif','../images/nav/specials_R.gif','../images/nav/film_B.gif','../images/nav/film_R.gif')">
 <table width="996" border="0" align="center" cellpadding="0" cellspacing="0" bgColor="#F6F5EE">
@@ -109,16 +117,16 @@ function MM_swapImage() { //v3.0
 					<TD width="60">
 					<IMG border="0" src="../images/spacer.gif" width="2" height="385">
 					</TD>
-					<TD width="876" valign="top">
-						<p align="center"><b><i>
+					<TD width="876" valign="top"> <p align="center"><b><i>
 					<h2>The Friends of Hart Park &amp; Museum</h2></i></b><br>
 <h4>
 <p>
 Please join The Friends of Hart Park!  We are people in your community who volunteer their time and talents to support the park and museum facilities.  For many years, funds raised by the Friends have been used to help maintain the mansion, help with the animals in the park, and clean/restore numerous art treasures.
-<p>
-<b>By joining at any level, you will receive our quarterly newsletter, and be kept up to date on our events! Additionally, you can enjoy the benefits outlined below if you join at the Sponsor level and above.</b>
-<p>
-All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
+
+<p>Additionally, you can enjoy the benefits outlined below if you join at the Sponsor level and above.
+
+<p>Finally, stay up to date on our events! See sign-up for our free newletter below.
+<p>All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
 </h4>
 <h3>Annual (except where indicated) Membership categories &amp; additional benefits</h3>
 		<h4>
@@ -142,45 +150,41 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 				<TR>
 					<td><b>Sponsor&mdash;$75</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
 				</TR>
 				<TR>
 					<td><b>Patron&mdash;$125</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>2 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>2 tickets to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 				</TR>
 				<TR>
 					<td><b>Silver&mdash;$250</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>4 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>4 tickets to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
-					<td>Recognition on Donor Board</td>
 				</TR>
 				<TR>
 					<td><b>Gold&mdash;$500</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>6 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>6 tickets to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
-					<td>Recognition on Donor Board</td>
 				</TR>
 				<TR>
 					<td><b>Diamond&mdash;$1000</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>8 tickets (reserved table) to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>8 tickets (reserved table) to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
-					<td>Recognition on Donor Board</td>
 				</TR>
 				<TR>
 					<td><b>Corporate Benefactor&mdash;$2500</b></td>
 					<td>Newsletter Recognition</td>
-					<td>Personalized Museum &amp; Park Tour</td>
-					<td>10 tickets (reserved table) to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>Personalized Barnyard &amp; Park Tour</td>
+					<td>10 tickets (reserved table) to our next <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> gift shop</td>
-					<td>Recognition on donor board</td>
 					<td>Free rental of <a href="../Hart_Hall/hart_hall.html">Hart Hall</a> for 1 corporate event 
 					(<a href="../Contact/contact.html">call Park</a> for details)</td>
 				</TR>
@@ -209,6 +213,42 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
+<!-- Begin Mailchimp Signup Form -->
+<br>
+<hr>
+
+
+<div id="mc_embed_signup">
+<form action="https://FriendsOfHartPark.us13.list-manage.com/subscribe/post?u=49d82e29767e797493dce561a&amp;id=435ef0006d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Subscribe to &ldquo;Hart of the Matter&rdquo; newsletter</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name </label>
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+	<label for="mce-LNAME">Last Name </label>
+	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_49d82e29767e797493dce561a_435ef0006d" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+<hr>
 
 
 </p>
