--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 
 <h2 align="center">Click below for details on the upcoming Newhallywood Silent Film Festival!<br><br></h2>
 <a target="_blank" href="https://santaclaritaarts.com/newhallywood">
-<img src="Event_Pages/Newhallywood-2023.jpg"/>
+<img src="Event_Pages/Newhallywood2023.png"/>
 </a>
 <br>
 <br>
