--- a/index.htm
+++ b/index.htm
@@ -222,8 +222,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/5cba8e0f4224/hart-of-the-matter-spring-6265735" target="_blank">
-                                  here for the Spring 2023 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/e16104a28aa4/hart-of-the-matter-summer-2023" target="_blank">
+                                  here for the Summer 2023 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
